--- a/scrolltextview/src/main/res/values/scrolltextview_attrs.xml
+++ b/scrolltextview/src/main/res/values/scrolltextview_attrs.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <declare-styleable name="TextSwicherStock">
+    <declare-styleable name="ScrollTextView">
+        <attr name="text" format="string" />
         <attr name="textColor" format="color" />
         <attr name="textSize" format="dimension" />
         <attr name="textStyle">
