字符显示计算待调整

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,5 +13,6 @@
     <com.wyx.scrolltextview.ScrollTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        ScrollTextView:textColor="@color/colorAccent"
         ScrollTextView:text="Hello World!" />
 </RelativeLayout>
